{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 934,
  "lineage": "2223b7ba-007f-9159-b00f-25db431d1f15",
  "resources": [
    {
      "module": "module.elastic_ips",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a08d35c84475f5a5",
            "domain": "vpc",
            "id": "eipalloc-0a08d35c84475f5a5",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-34-114.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.34.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip1"
            },
            "tags_all": {
              "Name": "elastic_ip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:internet-gateway/igw-0ffc66e0bf9f39195",
            "id": "igw-0ffc66e0bf9f39195",
            "owner_id": "815349656216",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a08d35c84475f5a5",
            "association_id": "eipassoc-079bef65fc9a52251",
            "connectivity_type": "public",
            "id": "nat-07515d764e24bbaf0",
            "network_interface_id": "eni-000de93cba8713f76",
            "private_ip": "10.0.77.238",
            "public_ip": "13.203.34.114",
            "subnet_id": "subnet-00b8c39e60d7b102c",
            "tags": {
              "AZ": "ap-south-1a",
              "Name": "nat_gateway_public_subnet_1"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Name": "nat_gateway_public_subnet_1"
            }
          },
          "dependencies": [
            "module.elastic_ips.aws_eip.elastic_ip",
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0614a85c929667d091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07515d764e24bbaf0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0614a85c929667d09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ips.aws_eip.elastic_ip",
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateways.aws_nat_gateway.nat_gateway",
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-007e4d8ffbde7df961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07515d764e24bbaf0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007e4d8ffbde7df96",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ips.aws_eip.elastic_ip",
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateways.aws_nat_gateway.nat_gateway",
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b5b331190fe75991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07515d764e24bbaf0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b5b331190fe7599",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ips.aws_eip.elastic_ip",
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateways.aws_nat_gateway.nat_gateway",
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c897ee18664d4a821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07515d764e24bbaf0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c897ee18664d4a82",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ips.aws_eip.elastic_ip",
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateways.aws_nat_gateway.nat_gateway",
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-0614a85c929667d09",
            "id": "rtb-0614a85c929667d09",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AZ": "ap-south-1a",
              "Name": "private_rtb_subnet_private_subnet_1"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Name": "private_rtb_subnet_private_subnet_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-007e4d8ffbde7df96",
            "id": "rtb-007e4d8ffbde7df96",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AZ": "ap-south-1b",
              "Name": "private_rtb_subnet_private_subnet_2"
            },
            "tags_all": {
              "AZ": "ap-south-1b",
              "Name": "private_rtb_subnet_private_subnet_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-02b5b331190fe7599",
            "id": "rtb-02b5b331190fe7599",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AZ": "ap-south-1c",
              "Name": "private_rtb_subnet_private_subnet_3"
            },
            "tags_all": {
              "AZ": "ap-south-1c",
              "Name": "private_rtb_subnet_private_subnet_3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-0c897ee18664d4a82",
            "id": "rtb-0c897ee18664d4a82",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AZ": "ap-south-1a",
              "Name": "private_rtb_subnet_private_subnet_4"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Name": "private_rtb_subnet_private_subnet_4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6179f47c916d166",
            "route_table_id": "rtb-0614a85c929667d09",
            "subnet_id": "subnet-0b4602185e5d77f85"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030cabece0e82f1f2",
            "route_table_id": "rtb-007e4d8ffbde7df96",
            "subnet_id": "subnet-0fc95a5bef863a84e"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deedba5673f91d61",
            "route_table_id": "rtb-02b5b331190fe7599",
            "subnet_id": "subnet-04b349150158e3b69"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1800e941f9b68c",
            "route_table_id": "rtb-0c897ee18664d4a82",
            "subnet_id": "subnet-0f8b8ba7a4f05069e"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.private_route_tables",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-0b4602185e5d77f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4602185e5d77f85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1a",
              "Name": "private_subnet_1",
              "Tier": "private"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Name": "private_subnet_1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-0fc95a5bef863a84e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc95a5bef863a84e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1b",
              "Name": "private_subnet_2",
              "Tier": "private"
            },
            "tags_all": {
              "AZ": "ap-south-1b",
              "Name": "private_subnet_2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-04b349150158e3b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b349150158e3b69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1c",
              "Name": "private_subnet_3",
              "Tier": "private"
            },
            "tags_all": {
              "AZ": "ap-south-1c",
              "Name": "private_subnet_3",
              "Tier": "private"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-0f8b8ba7a4f05069e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8b8ba7a4f05069e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1a",
              "Name": "private_subnet_4",
              "Tier": "private"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Name": "private_subnet_4",
              "Tier": "private"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:route-table/rtb-075b0a9bc1aaf9651",
            "id": "rtb-075b0a9bc1aaf9651",
            "owner_id": "815349656216",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffc66e0bf9f39195",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b43bee84134cd331",
            "route_table_id": "rtb-075b0a9bc1aaf9651",
            "subnet_id": "subnet-03896d00fb0dc39cc"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.public_route_table.aws_route_table.public_route_table",
            "module.public_route_table.data.aws_subnets.public",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a6520e705cc4ced",
            "route_table_id": "rtb-075b0a9bc1aaf9651",
            "subnet_id": "subnet-00b8c39e60d7b102c"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.public_route_table.aws_route_table.public_route_table",
            "module.public_route_table.data.aws_subnets.public",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf148f1ba100547c",
            "route_table_id": "rtb-075b0a9bc1aaf9651",
            "subnet_id": "subnet-06402efa68e54facb"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.public_route_table.aws_route_table.public_route_table",
            "module.public_route_table.data.aws_subnets.public",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0048ab5a85deffe18",
            "route_table_id": "rtb-075b0a9bc1aaf9651",
            "subnet_id": "subnet-0a82b4aa03a233dd7"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.public_route_table.aws_route_table.public_route_table",
            "module.public_route_table.data.aws_subnets.public",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-00b8c39e60d7b102c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b8c39e60d7b102c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1a",
              "Name": "public_subnet_1",
              "Tier": "public"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Name": "public_subnet_1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-0a82b4aa03a233dd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a82b4aa03a233dd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1b",
              "Name": "public_subnet_2",
              "Tier": "public"
            },
            "tags_all": {
              "AZ": "ap-south-1b",
              "Name": "public_subnet_2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-06402efa68e54facb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06402efa68e54facb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1c",
              "Name": "public_subnet_3",
              "Tier": "public"
            },
            "tags_all": {
              "AZ": "ap-south-1c",
              "Name": "public_subnet_3",
              "Tier": "public"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:subnet/subnet-03896d00fb0dc39cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03896d00fb0dc39cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815349656216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-south-1a",
              "Name": "public_subnet_4",
              "Tier": "public"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Name": "public_subnet_4",
              "Tier": "public"
            },
            "vpc_id": "vpc-0eb6553b919eb88a0"
          },
          "dependencies": [
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:815349656216:vpc/vpc-0eb6553b919eb88a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086e26c05c46dcf2a",
            "default_route_table_id": "rtb-095aa05c9c3c5a7eb",
            "default_security_group_id": "sg-07cc9846940e377a4",
            "dhcp_options_id": "dopt-03b98f6d70fbf9b1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb6553b919eb88a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095aa05c9c3c5a7eb",
            "owner_id": "815349656216",
            "tags": {
              "Name": "DemoVPC"
            },
            "tags_all": {
              "Name": "DemoVPC"
            }
          }
        }
      ]
    }
  ]
}